# libfprint

./: .gitlab-ci.yml  .gitmodules  README.md  meson.build
doc/: libfprint-2-sections.txt  libfprint-sections.txt
libfprint/: fp-context.c  fp-device.c  fp-image.c  fpi-device.h  fpi-image-device.h  fpi-image.c  fpi-image.h  fpi-ssm.c  fpi-ssm.h  fpi-usb-transfer.h  fprint-list-supported-devices.c  fprint-list-udev-rules.c  meson.build
libfprint/drivers/: virtual-image.c
libfprint/tod/: meson.build  tod-shared-loader.c
tests/: meson.build  test-device-fake.c  test-fp-context-tod.c  test-fp-device-tod.c  test-fpi-device.c  test-utils-tod.c  test-utils-tod.h
tests/tod-drivers/: README.md
